# keilstudio-blinky-custom-boards

./: CMakeLists.txt  custom_targets.json
TARGET_F405A/: CMakeLists.txt  PeripheralPinMaps.h  PinNames.h  system_clock.c
TARGET_STM32F4DISCOVERY/: CMakeLists.txt  PeripheralPins.c  PinNames.h  system_clock.c
